# gawk

./: ChangeLog  Makefile.am  Makefile.in  Makefile.pc  Makefile.unx  Message  NEWS  README.LONG_DOUBLE  README.async-events  README.constants  README.long-double  README.nolibtool  README.num-handler  TODO.LDBL  TODO.NUMH  TODO.decimal  aclocal.m4  alloca.c  array.c  awk.h  awk.y  awk1.c  awk7.c  awkgram.c  awkgram.y  bisonfix.awk  builtin.c  command.c  command.y  configh.in  configure  configure.ac  debug.c  dfa.c  double.c  eval.c  ext.c  field.c  float128.c  format.c  (+32 more)
awklib/: ChangeLog  Makefile.in
awklib/eg/lib/: repl_math.awk
doc/: ChangeLog  Makefile.am  Makefile.in  awkcard.ps  awkcard.tr  gawk.1  gawk.1.ps  gawk.dvi  gawk.info  gawk.ps  gawk.texi  gawkinet.dvi  gawkinet.ps  gawktexi.in  igawk.1.ps
extension/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  configh.in  configure  configure.ac  filefuncs.3am  filefuncs.c  fnmatch.3am  fnmatch.c  testext.c
extension/build-aux/: ChangeLog
extension/m4/: ChangeLog
extension/support/: ChangeLog
extras/: Makefile.in
m4/: ChangeLog  long_double.m4  readline.m4
misc/: ChangeLog  Makefile  TODO.LDBL  ap_math.awk  bin2dec.awk  float128.c  float80.c  floatcmp.awk  fp_math.awk  gawk_math.c  gawk_math.h  ldblin.awk  rem_pio2.c  splitlog2.awk  splitpi4.awk  sprintf128_0Lf.awk  sprintf64_0Lf.awk  sprintf_0Lf.awk
misc/gawk_libm_tests/: cos.awk  exp.awk  ldblint128.awk
misc/ldbl-tests/: atan2.awk  fmod.awk  ldblint128.ok  ldblint64.awk  ldblint64.ok  log.awk  pow.awk  sin.awk  sqrt.awk
misc/ldbl_tests/: Gentests  Makefile.am  Makefile.in  Maketests  symtab8.ok  testext.ok
pc/: ChangeLog  gawkmisc.pc
po/: LINGUAS  ast.gmo  ast.po  ca.gmo  ca.po  da.gmo  da.po  de.gmo  de.po  es.gmo  es.po  fi.gmo  fi.po  fr.gmo  fr.po  ga.gmo  ga.po  gawk.pot  he.gmo  he.po  id.gmo  id.po  it.gmo  it.po  ja.gmo  ja.po  nl.gmo  nl.po  pl.gmo  pl.po  pt_BR.gmo  pt_BR.po  ro.gmo  ro.po  rw.gmo  rw.po  sv.gmo  sv.po  tr.gmo  tr.po  (+4 more)
test/: ChangeLog  Makefile.am  Makefile.in  Maketests  assignconst.awk  assignconst.ok  dumpvars.ok  fflush.sh  localenl.sh  rtlen.sh  rtlen01.sh  symtab1.ok  symtab6.ok  symtab8.ok
